# gemini-v3

./: pyproject.toml  ruff.toml
proto/: compile_proto.py
scripts/: download_historical.py  run_latency_bench.py
src/cryptochart/: __init__.py  aggregator.py  config.py  logging_config.py  normalizer.py  persistence.py  publisher.py
src/cryptochart/adapters/: __init__.py  base.py  binance.py  bitget.py  bitstamp.py  bitvavo.py  coinbase.py  digifinex.py  kraken.py  okx.py
src/cryptochart/ui/: main.py  qt_asyncio_integration.py
src/cryptochart/ui/views/: chart_view.py  pair_selector.py  settings_panel.py
src/cryptochart/utils/: rate_limiter.py  ringbuffer.py  time.py
tests/integration/: test_latency_budget.py  test_multi_exchange_resilience.py  test_vwap_cumvol_consistency.py
tests/unit/: test_aggregator.py  test_normalizer.py  test_ringbuffer.py
